2006-10-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-cnet-jp.el (shimbun-clear-contents): Remove anchors
	to print pages.

	* shimbun/sb-opentechpress-jp.el
	(shimbun-opentechpress-jp-content-end): Now covers widen area.

2006-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-mail.el (w3m-mail-compose-with-vm): Treat source as binary
	data for images; encode source according to charset; use
	mail-send-actions to kill source buffer.
	(w3m-mail): Examine charset when the page is displayed normally.

	* w3m-util.el (w3m-coding-system-to-mime-charset): Rename to
	w3m-coding-system-to-charset and move to w3m.el

	* w3m.el (w3m-coding-system-to-charset): Move from w3m-util.el.
	(w3m-buffer): New function.

2006-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-mail-user-agents): Add vm-user-agent.

	* w3m-mail.el (w3m-mail-user-agent-compose-function-alist): Add
	vm-user-agent.
	(w3m-mail-compose-with-vm): New function.
	(w3m-mail-goto-body-and-clear-body): New function.
	(w3m-mail-position-point): New function.
	(w3m-mail-compose-with-mml, w3m-mail-compose-with-semi): Use them.

2006-09-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (w3m-mail-compose-with-mew): Handle coding-system and
	charset accurately. When call with `current-prefix-arg', try to
	use existing draft buffer.

	* w3m-mail.el (w3m-mail): Bind
	`w3m-history-reuse-history-elements' to 'reload.

2006-09-29  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* w3m-mail.el (w3m-mail-compose-with-semi): Handle types other
	than text/html as well. Decide the charset when the charset is nil
	though the content-type is a text.

2006-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-mail.el (w3m-mail-compose-with-mml): Treat source as binary
	data for images (we will probably have to do so for some more types);
	pass content-type argument to MML.

2006-09-28  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-mail-user-agents): Add mew-user-agent.
